--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dat-gui": "^4.1.1",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.1",
+    "react-postprocessing": "^1.4.0",
     "react-refresh": "^0.8.3",
     "react-three-fiber": "^5.3.19",
     "resolve": "1.18.1",
