--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "jest-watch-typeahead": "0.6.1",
     "lerp": "^1.0.3",
     "mini-css-extract-plugin": "0.11.3",
-    "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
@@ -61,6 +60,7 @@
     "react-three-fiber": "^5.3.22",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.4",
+    "sass": "^1.42.1",
     "sass-loader": "^10.2.0",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
