--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.20.26",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
@@ -55,8 +56,11 @@
     "react-dat-gui": "^4.1.1",
     "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-postprocessing": "^1.4.0",
     "react-refresh": "^0.8.3",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-three-fiber": "^5.3.22",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.4",
